<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friends Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_out">Log out</string>

    <!-- PopUpDetailsPerson -->
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="facebook_chat">Facebook Chat</string>
    <string name="show_distance">Show Distance</string>
    <string name="given_name">Maximilian</string>
    <string name="family_name">Mustermann</string>
    <string name="image_person">Image Person</string>
    <string name="back">back</string>
    <string name="get_directions">Get Directions</string>

    <!-- PopUpDetailsPoi -->
    <string name="poi_title">Title</string>
    <string name="poi_description">Description</string>

    <!-- PopUpSavePoi -->
    <string name="popup_save_poi">Save</string>
    <string name="popup_close_poi">Back</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Friend\'s Name</string>
    <string name="app_id">395072980615176</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    <!-- Settings -->
    <string name="action_settings">Settings</string><string name="automaticGeolocSwitch">Automatic Geolocalization</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="GPSSwitch">Localization Settings</string>
    <string name="dataTextSwitch">Data Settings</string>
    <string name="hello_world">hello world</string>

</resources>
