<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_light"> 
	
	<EditText
          android:id="@+id/tPOISetTitle"
          android:layout_width="fill_parent"
          android:layout_height="50dp"
          android:textSize="21sp"
          android:hint="@string/poi_title"
          android:layout_marginBottom="3dp"/>
	
      <Button
          android:id="@+id/btnSave"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/popup_save_poi" />

      <Button
          android:id="@+id/btnBack"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/popup_close_poi" />

      
      
</LinearLayout>
