<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/automaticGeolocTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automaticGeolocSwitch" />

        <Switch
            android:id="@+id/geolocSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/GPSManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GPSSwitch" />

        <Switch
            android:id="@+id/GPSSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataTextSwitch" />

        <Switch
            android:id="@+id/dataSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>